Worked on it and started help command
Went one step forwards and two steps backwards

--- a/bot/data/lang/german.json
+++ b/bot/data/lang/german.json
@@ -1,1 +1,2 @@
-{"setprefix1":"Das Prefix des Bots ist jetzt `"}
+{"setprefix1":"Das Prefix des Bots ist jetzt `",
+"setprefix2":"Das gewählte Prefix ist ungültig."}
